--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Copy build to folder 📦
         run: |
           mkdir -p build/${{ github.ref_name }}/reveal.js/dist && \
-          cp -r favicon.ico *.html images css js build/${{ github.ref_name }} && \
+          cp -r favicon.svg *.html images css highlight.js build/${{ github.ref_name }} && \
           cp -r reveal.js/dist/* build/${{ github.ref_name }}/reveal.js/dist/ && \
           cp -r reveal.js/plugin build/${{ github.ref_name }}/reveal.js/
 
