--- a/toxic-library-remover/src/main/resources/META-INF/rewrite/rewrite.yml
+++ b/toxic-library-remover/src/main/resources/META-INF/rewrite/rewrite.yml
@@ -1,6 +1,6 @@
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.acme.RemovesThatToxicDependency
+name: com.github.jtama.openrewrite.RemovesThatToxicDependency
 displayName: Removes that toxic dependency
 description: |
   Migrate from AcmeToxic ☠️ to AcmeHealthy 😇,
@@ -12,7 +12,7 @@ recipeList:
   - org.openrewrite.java.ChangeMethodTargetToStatic:
       methodPattern: com.github.jtama.toxic.BigDecimalUtils valueOf(..)
       fullyQualifiedTargetTypeName: java.math.BigDecimal
-  - org.acme.VousAllezVoirCeQueVousAllezVoir
+  - com.github.jtama.openrewrite.VousAllezVoirCeQueVousAllezVoir
   - org.openrewrite.java.RemoveUnusedImports
   - org.openrewrite.staticanalysis.RemoveUnusedPrivateFields
   - org.openrewrite.maven.RemoveDependency:
@@ -22,7 +22,7 @@ recipeList:
       properties: toxic\.version
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.acme.VousAllezVoirCeQueVousAllezVoir
+name: com.github.jtama.openrewrite.VousAllezVoirCeQueVousAllezVoir
 displayName: Ça va vous épater
 description: |
   Rech. proj. pr proj. priv. Self Dem. Brt. Poss. S’adr. à l’hô. Mart
@@ -31,4 +31,4 @@ tags:
 recipeList:
   - com.github.jtama.openrewrite.RemoveFooBarUtilsIsEmptyRecipes
   - com.github.jtama.openrewrite.RemoveFooBarUtilsStringFormatted
-  - com.github.jtama.openrewrite.UseObjectsCompare
+  - com.github.jtama.openrewrite.NeverAssignNullToList
