--- a/toxic-library-remover/src/main/resources/META-INF/rewrite/rewrite.yml
+++ b/toxic-library-remover/src/main/resources/META-INF/rewrite/rewrite.yml
@@ -34,4 +34,5 @@ preconditions:
 recipeList:
   - com.github.jtama.openrewrite.RemoveFooBarUtilsIsEmptyRecipes
   - com.github.jtama.openrewrite.RemoveFooBarUtilsStringFormatted
+  - com.github.jtama.openrewrite.RemoveLogStartInvocations
   - com.github.jtama.openrewrite.UseObjectsCompare
