--- a/toxic-library-remover/pom.xml
+++ b/toxic-library-remover/pom.xml
@@ -56,6 +56,12 @@
         <dependency>
             <groupId>org.openrewrite</groupId>
             <artifactId>rewrite-java</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.openrewrite.recipe</groupId>
