--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,14 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '25'
           distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn -f toxic-library-remover/pom.xml clean install
+      - name: Build toxic-library
+        run: cd toxic-library && mvn clean install
+
+      - name: Build toxic-library-remover
+        run: cd toxic-library-remover && mvn clean verify
 
       - name: Get project version
         id: get_version
